--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 authors = ["Stephen Cirner <steve@blackfynn.com>"]
 
 [dependencies]
+futures = "0.1"
+hyper = "0.11"
+hyper-tls = "0.1"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
+tokio-core = "0.1"
