--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ authors = ["Stephen Cirner <steve@blackfynn.com>"]
 futures = "0.1"
 hyper = "0.11"
 hyper-tls = "0.1"
+log = "0.4"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
