Run rustfmt and fix warning from clippy.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "stitch"
 version = "0.1.0"
 authors = ["Stephen Cirner <steve@blackfynn.com>"]
+description = "A rust interface for pushing data to https://www.stitchdata.com."
+license = "MIT OR Apache-2.0"
 
 [dependencies]
 futures = "0.1"
